# dataverse_pooch

./: .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
dataverse2pooch/: __init__.py
dataverse_pooch/: __init__.py
test/: test_dataverse2pooch.py  test_dataverse_pooch.py
