[build-system]
requires = [
    "setuptools>=61",
]
build-backend = "setuptools.build_meta"

[project]
name = "dataverse2pooch"
version = "0.0.1"
description = "Create pooch registry files from DataVerse repositories"
readme = "README.md"
maintainers = [
    { name = "Dominic Kempf", email = "ssc@iwr.uni-heidelberg.de" },
]
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "click",
    "requests",
]

[project.scripts]
dataverse2pooch = "dataverse2pooch.__main__:main"

[tool.setuptools]
packages = ["dataverse2pooch"]
